Fixes #3383
- Rename CSS class to bring inline with established naming pattern;
- Move "__item-h" width spec into more general class, rather than
specific to scrollable-children;
- Remove JS-based detection and setting of overflow to use CSS overflow:
 auto instead. This may also fix another observed problem re.
 scrollbars not appearing when expected;

--- a/src/ui/layout/mct-tree.scss
+++ b/src/ui/layout/mct-tree.scss
@@ -26,10 +26,8 @@
         overflow: hidden;
         transition: all;
 
-        .scrollable-children {
-            .c-tree__item-h {
-                width: 100%;
-            }
+        &__scrollable-children {
+            overflow: auto;
         }
 
         &__item--empty {
@@ -57,7 +55,11 @@
 
     li {
         position: relative;
-        &[class*="__item-h"] { display: block; }
+        &[class*="__item-h"] {
+            display: block;
+            width: 100%;
+        }
+
         + li {
             margin-top: 1px;
         }
